--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href = '/assets/styles.css' rel = 'stylesheet' />
     <script src='/dist/main.js' defer></script>
   </head>
   <body>
